samples/_failures_safe/1761157855_72bab8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccd05df1.c: In function ‘main’:
./samples/SAFE/__tmp_ccd05df1.c:152:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  152 |         State new
      |         ^~~~~
./samples/SAFE/__tmp_ccd05df1.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccd05df1.c:152:9: error: expected declaration or statement at end of input
